try fix input date on mobile

--- a/src/scss/form/__inputDate.scss
+++ b/src/scss/form/__inputDate.scss
@@ -25,8 +25,10 @@
 
         &:invalid {
             &::after {
-                position: relative
-                ;
+                position: relative;
+
+                left: 0;
+                
                 display: block;
 
                 content: 'ДД.ММ.ГГГГ';
